crates/aura-app/tests/ui/readiness_refresh_helpers_private.stderr
error[E0603]: function `refresh_authoritative_invitation_readiness` is private
 --> tests/ui/readiness_refresh_helpers_private.rs:2:50
  |
2 |     let _ = aura_app::ui::workflows::invitation::refresh_authoritative_invitation_readiness;
  |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private function
  |
note: the function `refresh_authoritative_invitation_readiness` is defined here
 --> src/workflows/invitation.rs
  |
  |     refresh_authoritative_contact_link_readiness, refresh_authoritative_invitation_readiness,
  |                                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0603]: function `refresh_authoritative_contact_link_readiness` is private
 --> tests/ui/readiness_refresh_helpers_private.rs:3:50
  |
3 |     let _ = aura_app::ui::workflows::invitation::refresh_authoritative_contact_link_readiness;
  |                                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ private function
  |
note: the function `refresh_authoritative_contact_link_readiness` is defined here
 --> src/workflows/invitation.rs
  |
  |     refresh_authoritative_contact_link_readiness, refresh_authoritative_invitation_readiness,
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
