crates/aura-app/tests/ui/readiness_refresh_helpers_private.rs
fn main() {
    let _ = aura_app::ui::workflows::invitation::refresh_authoritative_invitation_readiness;
    let _ = aura_app::ui::workflows::invitation::refresh_authoritative_contact_link_readiness;
}
